--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "🌟 Starbot",
-  "description": "Starbot is GitHub's trending open-source page, reincarnated as a Slack bot",
-  "repository": "https://github.com/mattcreager/starbot",
+  "name": "Poly Bot",
+  "description": "PolyBot is a badge bot for Slack",
+  "repository": "https://github.com/dmd-program/polybot",
   "logo": "https://heroku-www-files.s3.amazonaws.com/starbot/starbot-icon.png",
   "success_url": "/",
   "env": {
