--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "starbot",
-  "description": "Starbot is GitHub's trending open-source page, reincarnated as a Slack bot",
+  "name": "poly-bot",
+  "description": "PolyBot is a badge bot for Slack",
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
@@ -9,12 +9,12 @@
     "test": "standard"
   },
   "author": {
-    "email": "creager@heroku.com",
-    "name": "Matthew Creager",
-    "url": "https://twitter.com/matt_creager"
+    "email": "hi.michael.collins@gmail.com",
+    "name": "Michael Collins",
+    "url": "https://twitter.com/_mike_collins"
   },
   "bugs": {
-    "url": "https://github.com/mattcreager"
+    "url": "https://github.com/dmd-program/polybot"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
